Sql tools for infrastructre,iconfiguration,appsettingJson,default connection

--- a/AuctionAce.Api/appsettings.json
+++ b/AuctionAce.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-44NA6J4;Database=InsERT_NBP_Db;Trusted_Connection=true;TrustServerCertificate=true"
+  }
 }
