--- a/AuctionAce.Api/appsettings.json
+++ b/AuctionAce.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-44NA6J4;Database=InsERT_NBP_Db;Trusted_Connection=true;TrustServerCertificate=true"
+    "DefaultConnection": "Server=MICHAť\\SQLEXPRESS;database=AuctionAce;Integrated Security=True;encrypt=false"
   }
 }
