--- a/AuctionAce.Api/appsettings.json
+++ b/AuctionAce.Api/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=MICHAť\\SQLEXPRESS;database=AuctionAce;Integrated Security=True;encrypt=false"
-  }
+  },
+  "JwtSettings": {
+    "Secret": "Key-Ace-Ace-super-secret-Ace-Ace-Key",
+    "ExpiryMinutes": 60,
+    "Issuer": "AuctionAceIssuer",
+    "Audience": "AuctionAceAudience"
+  },
 }
