--- a/AuctionAce.Api/appsettings.json
+++ b/AuctionAce.Api/appsettings.json
@@ -6,13 +6,13 @@
     }
   },
   "AllowedHosts": "*",
+  "config": {
+    "JwtKey": "UHJTFRTYUY787FVGHMJYAERvlkuytnbf",
+    "JwtExpireDays": 30,
+    "JwtIssuer": "AuctionAceAdminPanel",
+    "JwtAudience": "AceApplicationUser"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=MICHAť\\SQLEXPRESS;database=AuctionAce;Integrated Security=True;encrypt=false"
-  },
-  "JwtSettings": {
-    "Secret": "Key-Ace-Ace-super-secret-Ace-Ace-Key",
-    "ExpiryMinutes": 60,
-    "Issuer": "AuctionAceIssuer",
-    "Audience": "AuctionAceAudience"
-  },
+  }
 }
