auction,items images save on drive

--- a/AuctionAce.Api/appsettings.json
+++ b/AuctionAce.Api/appsettings.json
@@ -13,6 +13,6 @@
     "JwtAudience": "AceApplicationUser"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=MICHAť\\SQLEXPRESS;database=AuctionAce;Integrated Security=True;encrypt=false"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;database=AuctionAce;Integrated Security=True;encrypt=false"
   }
 }
