--- a/AuctionAce.Api/appsettings.json
+++ b/AuctionAce.Api/appsettings.json
@@ -13,6 +13,6 @@
     "JwtAudience": "AceApplicationUser"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;database=AuctionAce;Integrated Security=True;encrypt=false"
+    "DefaultConnection": "data source=MICHAť\\SQLEXPRESS;initial catalog=AuctionAce;MultipleActiveResultSets=True;App=EntityFramework;TrustServerCertificate=True;Trusted_Connection=True"
   }
 }
