item chat working perfect

--- a/AuctionAce.Api/appsettings.json
+++ b/AuctionAce.Api/appsettings.json
@@ -13,6 +13,6 @@
     "JwtAudience": "AceApplicationUser"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=AuctionAce;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+    "DefaultConnection": "data source=MICHAť\\SQLEXPRESS;initial catalog=AuctionAce;MultipleActiveResultSets=True;App=EntityFramework;TrustServerCertificate=True;Trusted_Connection=True"
   }
 }
