--- a/AuctionAce.Api/appsettings.json
+++ b/AuctionAce.Api/appsettings.json
@@ -13,7 +13,7 @@
     "JwtAudience": "AceApplicationUser"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=mssql.webio.pl,2401;Initial Catalog=fmkancel1_AuctionAce;User Id=fmkancel1_michaltestdatabase;Password=Michal123$;MultipleActiveResultSets=True;App=EntityFramework;TrustServerCertificate=True;"
+    "DefaultConnection": ""
     //"DefaultConnection": "data source=MICHAť\\SQLEXPRESS;initial catalog=AuctionAce;MultipleActiveResultSets=True;App=EntityFramework;TrustServerCertificate=True;Trusted_Connection=True"
   }
 }
